<resources>
    <string name="app_name">Puzzle Game</string>
    <string name="loading_session">Loading session</string>
    <string name="loading">Loading</string>
    <string name="game">Game</string>
    <string name="puzzle">Puzzle</string>
    <string name="alexdev">AlexDev</string>
    <string name="title_activity_home">homeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scores">Scores</string>
    <string name="profile">Profile</string>
    <string name="new_game">New Game</string>
    <string name="save">Save</string>
    <string name="global_scores">global scores</string>
    <string name="log_out">Log out</string>

    <string name="facebook_app_id">2341342252558552</string>
    <string name="fb_login_protocol_scheme">fb2341342252558552</string>
    <string name="sing_up">Sing Up</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>

    <string-array name="gender_arrays">
        <item>Girl</item>
        <item>Men</item>
    </string-array>

</resources>
