<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="400dp"
    android:background="@drawable/curve_shap"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_above="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/titleText"
            android:layout_margin="5sp"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sing_up"/>
        <EditText
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/userEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/username"/>
        <EditText
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:id="@+id/mailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/email"/>
        <Spinner
            android:entries="@array/gender_arrays"
            android:id="@+id/genderSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="textPassword"
            android:maxLines="1"
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/password"/>
        <EditText
            android:inputType="textPassword"
            android:maxLines="1"
            android:id="@+id/passRepeatEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/repeat_password"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/closeButton"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:text="Close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:text="Save"
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>